<resources>
    <string name="app_name">Whack-a-mole</string>
    <string name="start_game">Start Game</string>
    <string name="high_score">High score: %s</string>
    <string name="score">Your score: %s</string>
    <string name="play_again">Play again</string>
    <string name="menu">Menu</string>
    <string name="timer">00</string>
    <string name="hole_description">Mole hole</string>
</resources>