<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/cl_top_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2196F3"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/timer"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="48sp"/>

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/score"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_playing_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_top_part">

            <ImageView
                android:id="@+id/hole_1"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/hole_description"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_hole_large" />

            <ImageView
                android:id="@+id/hole_2"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/hole_description"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:layout_constraintStart_toEndOf="@id/hole_1"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_hole_large" />

            <ImageView
                android:id="@+id/hole_3"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/hole_description"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/hole_2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_hole_large" />

            <ImageView
                android:id="@+id/hole_4"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/hole_description"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hole_1"
                app:srcCompat="@drawable/ic_hole_large" />

            <ImageView
                android:id="@+id/hole_5"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/hole_description"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:layout_constraintStart_toEndOf="@id/hole_1"
                app:layout_constraintTop_toBottomOf="@id/hole_1"
                app:srcCompat="@drawable/ic_hole_large" />

            <ImageView
                android:id="@+id/hole_6"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/hole_description"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/hole_2"
                app:layout_constraintTop_toBottomOf="@id/hole_1"
                app:srcCompat="@drawable/ic_hole_large" />

            <ImageView
                android:id="@+id/hole_7"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/hole_description"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hole_4"
                app:srcCompat="@drawable/ic_hole_large" />

            <ImageView
                android:id="@+id/hole_8"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/hole_description"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/hole_1"
                app:layout_constraintTop_toBottomOf="@id/hole_4"
                app:srcCompat="@drawable/ic_hole_large" />

            <ImageView
                android:id="@+id/hole_9"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/hole_description"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/hole_2"
                app:layout_constraintTop_toBottomOf="@id/hole_4"
                app:srcCompat="@drawable/ic_hole_large" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>